k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-converter-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: prod.currencyconverter.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: currency-converter-service
            port:
              number: 5555
